Perkin-UAT/force-app/main/default/objects/Renewal_Service_Ownership__mdt/Renewal_Service_Ownership__mdt.object-meta.xml
<CustomObject>
    <description>Created for ownership mgmt by PWC SC-398</description>
    <label>Renewal Service Ownership</label>
    <pluralLabel>Renewal Service Ownerships</pluralLabel>
</CustomObject>