Perkin-UAT/force-app/main/default/objects/Renewal_Service_Ownership__mdt/fields/Final_Point__c.field-meta.xml
<CustomField>
    <fullName>Final_Point__c</fullName>
    <description>Created by PWC SC-398</description>
    <label>Final Point</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>