Perkin-UAT/force-app/main/default/objects/Renewal_Service_Ownership__mdt/fields/Fx_PKI_Territory__c.field-meta.xml
<CustomField>
    <fullName>Fx_PKI_Territory__c</fullName>
    <description>Created by PWC SC-398, information about territory</description>
    <label>Fx PKI Territory</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>