Perkin-UAT/force-app/main/default/objects/Renewal_Service_Ownership__mdt/fields/Regional_Director__c.field-meta.xml
<CustomField>
    <fullName>Regional_Director__c</fullName>
    <description>Created by PWC SC-398</description>
    <label>Regional Director</label>
    <length>50</length>
    <type>Text</type>
</CustomField>